2008-07-13  Zoltan Varga  <vargaz@gmail.com>

	* inssel.brg (CEE_CASTCLASS): Remove some dead code.

2008-07-12  Zoltan Varga  <vargaz@gmail.com>

	* mini-x86.h aot-compiler.c aot-runtime.c: Store the plt info offset inline
	on x86.

	* mini-amd64.h aot-compiler.c aot-runtime.c: Store the plt info offset inline
	on amd64 similar to the way it is done on arm.

	* mini.h (MONO_AOT_FILE_VERSION): Bump AOT file format version.

	* aot-runtime.c (load_aot_module): Rename 'info' to 'amodule' for 
	consistency, normalize error messages, avoid loading aot-only modules in
	normal mode.

	* driver.c (mono_main): Rename --aot-only command line option to --full-aot
	for consistency.

	* aot-compiler.c aot-runtime.c tramp-arm.c: Implement aot-only support.

2008-07-11  Martin Baulig  <martin@ximian.com>

	* debug-debugger.h
	(MonoDebuggerInfo): Add `interruption_request'.

2008-07-12  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (emit_plt): Remove some dead code.

	* exceptions-arm.c (mono_arch_get_call_filter_full): Initialize ji.

	* aot-runtime.c (mono_aot_get_plt_info_offset): New helper function to
	return the plt info offset belonging to a given plt entry.

	* mini-trampolines.c (mono_aot_plt_trampoline): Use 
	mono_aot_get_plt_info_offset.
	
	* aot-runtime.c aot-compiler.c tramp-arm.c: Change the arm plt code to be
	similar to the amd64 code by makeing jumps through a separate jump table 
	instead of embedding the jump addresses into the code.

2008-07-11  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mono_method_to_ir): Disable aot for calling ldtoken in a generic
	method.

2008-07-10  Martin Baulig  <martin@ximian.com>

	* mini.c (mini_method_compile): Disable generics sharing when
	running in the debugger.

2008-07-10  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mono_method_to_ir): Create the got var in CEE_REFANYVAL.

	* inssel.brg (CEE_CASTCLASS): Avoid reusing temporary registers to prevent